# Sam2-Football-Tracker

./: .gitignore  README.md  compose.yaml  pyproject.toml  run_sam2_track.sh  track_player_sam2.py
docs/: architecture.md
infra/: mediamtx.yml
scripts/: bootstrap-server.sh  bootstrap-ui.sh  clear-job-cache.sh  clear-test-artifacts.sh  dev-server.sh  dev-ui.sh  e2e-server.sh  e2e-ui.sh  generate_moving_dot_video.py  track-local.sh
server/: .env.example  README.md  pyproject.toml
server/src/football_tracker/: __init__.py  main.py
server/src/football_tracker/api/routes/: __init__.py  health.py  jobs.py  videos.py
server/src/football_tracker/core/: settings.py  tracking_service.py  video_store.py
server/src/football_tracker/tracking/: __init__.py  interactive.py
server/tests/: test_health.py  test_real_tracker_smoke.py  test_render_workflow.py  test_video_workflow.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  vite.config.ts
ui/e2e/: player-workflow.spec.ts
ui/src/: main.ts  styles.css  tracker-app.ts
ui/src/features/tracker/: geometry.ts  types.ts
ui/src/features/tracker/actions/: index.ts  playback-actions.ts  processing-actions.ts  selection-actions.ts  shared.ts  source-actions.ts
ui/src/features/tracker/components/: tracker-draw-overlay.ts  tracker-sidebar.ts  tracker-video-panel.ts
ui/src/features/tracker/services/: job-status-stream.ts
ui/src/features/tracker/store/: playback-state.ts  processing-state.ts  selection-state.ts  selectors.ts  source-state.ts
ui/src/lib/: api.ts
ui/src/state/: app-state.ts
ui/src/styles/: base.css  buttons.css  feedback.css  forms.css  layout.css  surfaces.css
ui/src/tracker/: geometry.ts  types.ts
ui/src/tracker/actions/: processing-actions.ts  selection-actions.ts  source-actions.ts
ui/src/tracker/components/tracker-app/: tracker-app.css  tracker-app.ts
ui/src/tracker/components/tracker-draw-overlay/: tracker-draw-overlay.css  (+1 more)
ui/src/tracker/services/: job-status-stream.ts  video-playback.ts
ui/src/tracker/store/: index.ts  processing-state.ts  selectors.ts  source-state.ts
(+4 files in other folders)
