[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2-football-tracker"
version = "0.1.0"
description = "Single-player football tracking workflow built on top of the SAM 2 pip package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.24.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "numpy>=1.24.4",
    "opencv-python>=4.7.0",
    "pillow>=9.4.0",
    "sam2==1.1.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.1",
]

[project.scripts]
sam2-player-track = "track_player_sam2:main"

[tool.setuptools]
py-modules = ["track_player_sam2"]
