[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-tracker-server"
version = "0.1.0"
description = "FastAPI backend for the Football Tracker application."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.135.1",
    "huggingface_hub>=0.24.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0",
    "orjson>=3.11.0",
    "pillow>=9.4.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "sam2==1.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[project.scripts]
football-tracker-api = "football_tracker.main:run"
football-player-track = "football_tracker.tracking.interactive:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/football_tracker/tracking/interactive.py" = ["B023", "E501", "E731", "I001", "N818"]

[tool.ruff.format]
quote-style = "double"
